[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apifuse"
version = "0.1.0"
description = "APIFUSE - filesystem mounted projection of HTTP/REST OpenAPI-described ([swagger|openapi].[json|yaml] APIs or non-API JSON collections)
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
apifuse = "apifuse.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
